Security scan 20260427101342: no CVE fixes applied (xmlbeans blocked, EOL libs have no patch)